--- a/.github/workflows/moodle-plugin-ci.yml
+++ b/.github/workflows/moodle-plugin-ci.yml
@@ -30,6 +30,24 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - php: 8.3
+            moodle-branch: MOODLE_404_STABLE
+            database: pgsql
+          - php: 8.3
+            moodle-branch: MOODLE_404_STABLE
+            database: mariadb
+          - php: 8.2
+            moodle-branch: MOODLE_404_STABLE
+            database: pgsql
+          - php: 8.2
+            moodle-branch: MOODLE_404_STABLE
+            database: mariadb
+          - php: 8.1
+            moodle-branch: MOODLE_404_STABLE
+            database: pgsql
+          - php: 8.1
+            moodle-branch: MOODLE_404_STABLE
+            database: mariadb
           - php: 8.2
             moodle-branch: MOODLE_403_STABLE
             database: pgsql
