--- a/vue3/package.json
+++ b/vue3/package.json
@@ -19,12 +19,15 @@
     "@vue-flow/controls": "^1.1.0",
     "@vue-flow/core": "^1.26.0",
     "@vue-flow/minimap": "^1.2.0",
-    "bootstrap": "^5.3.2",
+    "@vuepic/vue-datepicker": "^8.8.1",
     "bootstrap-vue": "^2.23.1",
+    "chart.js": "^4.4.3",
     "primevue": "^3.48.1",
     "vue": "^3.4.18",
+    "vue-chartjs": "^5.3.1",
     "vue-input-autowidth": "^1.0.11",
     "vue-router": "^4.2.5",
+    "vue-select": "^4.0.0-beta.6",
     "vue-style-loader": "^4.1.3",
     "vue-toasted": "^1.1.28",
     "vue3-modal": "^0.1.6",
@@ -43,6 +46,8 @@
     "eslint-plugin-vue": "^9.20.1",
     "file-loader": "^6.2.0",
     "npm-force-resolutions": "^0.0.10",
+    "sass": "^1.77.6",
+    "sass-loader": "^14.2.1",
     "vue-loader": "^17.4.2",
     "vue-template-compiler": "^2.7.14",
     "webpack": "^5.82.0",
@@ -60,8 +65,16 @@
     },
     "extends": [
       "eslint:recommended",
-      "plugin:vue/recommended"
-    ]
+      "plugin:vue/essential"
+    ],
+    "rules": {
+      "eslint-plugin-vue/html-indent": 0,
+      "no-unused-vars": 0,
+      "eslint-plugin-vue/html-comment-indent": 0,
+      "max-statements-per-line": 0,
+      "eslint-plugin-vue/attributes-order": 0,
+      "eslint-plugin-vue/max-attributes-per-line": "off"
+    }
   },
   "browserslist": [
     "Chrome >= 45",
