--- a/.github/workflows/moodle-plugin-ci.yml
+++ b/.github/workflows/moodle-plugin-ci.yml
@@ -16,9 +16,18 @@ jobs:
       ignore_paths: 'vue3,moodle/tests/fixtures,moodle/Sniffs,moodle/vue3'
 
       extra_plugin_runners: |
+         # Export variables so they're available in this step
+          export CODECHECKER_IGNORE_PATHS="OpenTBS, TinyButStrong"
+          export PHPDOCCHECKER_IGNORE_PATHS="OpenTBS, TinyButStrong
+          export MUSTACHE_IGNORE_NAMES="bookingoption_dates_custom_list_items.mustache,form_booking_options_selector_suggestion.mustache,table_list_container.mustache,optiondatesteacherstable_list.mustache,optiondatesteacherstable_list_row.mustache,optiondatesteacherstable_list_container.mustache,option_collapsible_close.mustache,option_collapsible_open.mustache,static.mustache,advcheckbox.mustache,select.mustache,shorttext.mustache,mobile_details_button.mustache,mobile_mybookings_list.mustache,mobile_booking_option_details.mustache,mobile_view_page.mustache"
+          # Also set for future steps
           echo "CODECHECKER_IGNORE_PATHS=OpenTBS, TinyButStrong" >> $GITHUB_ENV
           echo "PHPDOCCHECKER_IGNORE_PATHS=OpenTBS, TinyButStrong" >> $GITHUB_ENV
-          echo "MUSTACHE_IGNORE_NAMES='bookingoption_dates_custom_list_items.mustache,form_booking_options_selector_suggestion.mustache,table_list_container.mustache,optiondatesteacherstable_list.mustache,optiondatesteacherstable_list_row.mustache,optiondatesteacherstable_list_container.mustache,option_collapsible_close.mustache,option_collapsible_open.mustache,static.mustache,advcheckbox.mustache,select.mustache,shorttext.mustache,mobile_details_button.mustache,mobile_mybookings_list.mustache,mobile_booking_option_details.mustache,mobile_view_page.mustache'" >> $GITHUB_ENV
+          echo "MUSTACHE_IGNORE_NAMES=bookingoption_dates_custom_list_items.mustache,form_booking_options_selector_suggestion.mustache,table_list_container.mustache,optiondatesteacherstable_list.mustache,optiondatesteacherstable_list_row.mustache,optiondatesteacherstable_list_container.mustache,option_collapsible_close.mustache,option_collapsible_open.mustache,static.mustache,advcheckbox.mustache,select.mustache,shorttext.mustache,mobile_details_button.mustache,mobile_mybookings_list.mustache,mobile_booking_option_details.mustache,mobile_view_page.mustache" >> $GITHUB_ENV
+
+          # Add debugging to verify variables are set
+          echo "MUSTACHE_IGNORE_NAMES environment variable is set to: $MUSTACHE_IGNORE_NAMES"
+
           moodle-plugin-ci add-plugin --branch main Wunderbyte-GmbH/moodle-local_wunderbyte_table
           moodle-plugin-ci add-plugin --branch MOODLE_401_DEV Wunderbyte-GmbH/moodle-local_shopping_cart
           moodle-plugin-ci add-plugin --branch main Wunderbyte-GmbH/moodle-local_entities
