Improvement: Refactor Scope Handling
# Conflicts:
#	classes/booking_answers/scopes/optionstoconfirm.php
#	classes/option/fields/waitforconfirmation.php
#	lib.php

Refactor: booking_answers class #1069

# Conflicts:
#	classes/bo_availability/conditions/askforconfirmation.php
#	classes/bo_availability/conditions/onwaitinglist.php
#	classes/booking_answers/scopes/optionstoconfirm.php
#	classes/booking_option.php
#	classes/option/fields/waitforconfirmation.php
#	classes/table/bookingoptions_wbtable.php
#	lang/de/booking.php
#	lang/en/booking.php

fix

# Conflicts:
#	settings.php

# Conflicts:
#	classes/local/mobile/customformstore.php

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,6 @@ vue3/node_modules
 # Ignore everything in bookingextension subfolders
 bookingextension/*/
 
-# Do not ignore approval_trainer
-!bookingextension/approval_trainer/
-!bookingextension/approval_trainer/**  # Unignore contents too
+# Do not ignore confirmation_trainer
+!bookingextension/confirmation_trainer/
+!bookingextension/confirmation_trainer/**  # Unignore contents too
