--- a/.github/workflows/moodle-plugin-ci.yml
+++ b/.github/workflows/moodle-plugin-ci.yml
@@ -27,10 +27,10 @@ jobs:
       mustache_ignore_names: 'bookingoption_dates_custom_list_items.mustache,form_booking_options_selector_suggestion.mustache,table_list_container.mustache,optiondatesteacherstable_list.mustache,optiondatesteacherstable_list_row.mustache,optiondatesteacherstable_list_container.mustache,option_collapsible_close.mustache,option_collapsible_open.mustache,static.mustache,advcheckbox.mustache,select.mustache,shorttext.mustache,mobile_details_button.mustache,mobile_mybookings_list.mustache,mobile_booking_option_details.mustache,mobile_view_page.mustache,table_cards_container.mustache'
 
       # Specify paths to ignore for code checker
-      codechecker_ignore_paths: 'OpenTBS, TinyButStrong'
+      # codechecker_ignore_paths: 'OpenTBS, TinyButStrong'
 
       # Specify paths to ignore for PHPDoc checker
-      phpdocchecker_ignore_paths: 'OpenTBS, TinyButStrong'
+      # phpdocchecker_ignore_paths: 'OpenTBS, TinyButStrong'
 
       # If you need to disable specific tests
       # disable_phpcpd: true
@@ -51,7 +51,7 @@ jobs:
       # Override to exclude stale AMD file check (similar to your current workaround)
       workarounds: |
         # Set additional environment variables
-        echo "SOME_PATHS=OpenTBS, TinyButStrong" >> $GITHUB_ENV
+        # echo "SOME_PATHS=OpenTBS, TinyButStrong" >> $GITHUB_ENV
 
         # WORKAROUND 17/04/2025: The following code is a workaround for the "File is stale and needs to be rebuilt" error
         # This occurs when AMD modules import Moodle core dependencies
@@ -105,10 +105,10 @@ jobs:
       mustache_ignore_names: 'bookingoption_dates_custom_list_items.mustache,form_booking_options_selector_suggestion.mustache,table_list_container.mustache,optiondatesteacherstable_list.mustache,optiondatesteacherstable_list_row.mustache,optiondatesteacherstable_list_container.mustache,option_collapsible_close.mustache,option_collapsible_open.mustache,static.mustache,advcheckbox.mustache,select.mustache,shorttext.mustache,mobile_details_button.mustache,mobile_mybookings_list.mustache,mobile_booking_option_details.mustache,mobile_view_page.mustache,table_cards_container.mustache'
 
       # Specify paths to ignore for code checker
-      codechecker_ignore_paths: 'OpenTBS, TinyButStrong'
+      # codechecker_ignore_paths: 'OpenTBS, TinyButStrong'
 
       # Specify paths to ignore for PHPDoc checker
-      phpdocchecker_ignore_paths: 'OpenTBS, TinyButStrong'
+      # phpdocchecker_ignore_paths: 'OpenTBS, TinyButStrong'
 
       # If you need to disable specific tests
       # disable_phpcpd: true
@@ -129,7 +129,7 @@ jobs:
       # Override to exclude stale AMD file check (similar to your current workaround)
       workarounds: |
         # Set additional environment variables
-        echo "SOME_PATHS=OpenTBS, TinyButStrong" >> $GITHUB_ENV
+        # echo "SOME_PATHS=OpenTBS, TinyButStrong" >> $GITHUB_ENV
 
         # WORKAROUND 17/04/2025: The following code is a workaround for the "File is stale and needs to be rebuilt" error
         # This occurs when AMD modules import Moodle core dependencies
